# 8-Resonant-Collinearity

./: CMakeLists.txt  build.ps1
src/: AntinodeCalculator.hpp  ArgumentParser.cpp  ArgumentParser.hpp  FileReader.cpp  FileReader.hpp  Main.cpp
